--- a/style.css
+++ b/style.css
@@ -10,22 +10,23 @@
   font-weight: medium;
 }
 
-h1,h2{
+h1,
+h2 {
   font-weight: bold;
   line-height: 1em;
-  color:rgb(33, 33, 33);
+  color: rgb(33, 33, 33);
 }
 * {
   font-family: "TTFirsNeue";
-  margin: 0;padding: 0;
-  
+  margin: 0;
+  padding: 0;
 }
 body {
 }
 .wap {
-    position: relative;
+  position: relative;
   height: 100vh;
-  width:100vw;
+  width: 100vw;
   background: #090909;
   /* background: rgb(41 41 41); */
   /* background-color: #DFDBE5; */
@@ -33,45 +34,45 @@ body {
 }
 
 #some {
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background: rgb(250, 250, 250);
-  overflow:hidden;
+  overflow: hidden;
   min-width: 340px;
   min-height: 380px;
   padding: 50px 50px;
-  
 }
-#head{
+#head {
   font-size: 63px;
 }
-#hat{
-  position:absolute;
+#hat {
+  position: absolute;
   width: 90px;
   height: auto;
 }
-#deco{
+#deco {
   z-index: -1;
-    /* width: 80%; */
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    opacity: .1;
-}
-#sub{
-    padding-top: 20px;
-    max-width: 280px;
-    line-height: 1.68em;
-    font-weight: 200;
-    color:rgb(97, 97, 97);
-    font-size: 12px;
-}
-#logo{
+  /* width: 80%; */
   position: absolute;
-    bottom: 50px;
-    right: 50px;
+  bottom: 0;
+  left: 0;
+  opacity: 0.1;
+}
+#sub {
+  padding-top: 20px;
+  max-width: 280px;
+  line-height: 1.68em;
+  font-weight: 200;
+  color: rgb(97, 97, 97);
+  font-size: 12px;
+  display: block;
+}
+#logo {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
 }
 #below {
   display: block;
@@ -92,55 +93,48 @@ body {
   }
 }
 
-
-
 /*  */
-.onConner{
+.onConner {
   background: rgb(76 76 76 / 12%);
-    z-index: 100;
-    padding: 10px;
-    cursor: pointer;
-    position: fixed;
-    bottom: 25vh;
-    left: 0px;
+  z-index: 100;
+  padding: 10px;
+  cursor: pointer;
+  position: fixed;
+  bottom: 25vh;
+  left: 0px;
   writing-mode: vertical-rl;
-  opacity: .2;
-  transition:.5s;
+  opacity: 0.2;
+  transition: 0.5s;
 }
-.onConner:hover{
+.onConner:hover {
   opacity: 1;
-  transform:scale(1.3) translateX(8px)
-
+  transform: scale(1.3) translateX(8px);
 }
 
-.onConner a i{
-  cursor:alias;
-  margin:0;
-  padding-bottom:3px;
-color:#111;
-font-size: 33px;
-transition: .4s ease;
-
+.onConner a i {
+  cursor: alias;
+  margin: 0;
+  padding-bottom: 3px;
+  color: #111;
+  font-size: 33px;
+  transition: 0.4s ease;
 }
 .onConner a .tooltiptext {
-
-writing-mode: horizontal-tb;
-width: 120px;
-height:25px;
-transition: transform .5s;
-background-color: black;
-color: #fff;
-text-align: center;
-border-radius: 6px;
-padding: 5px 0;
-position: absolute;
-z-index: 1;
-left: 85%;
-margin-top:-40px;
-visibility:hidden;
-
+  writing-mode: horizontal-tb;
+  width: 120px;
+  height: 25px;
+  transition: transform 0.5s;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  left: 85%;
+  margin-top: -40px;
+  visibility: hidden;
 }
-
 
 .onConner .tooltiptext::after {
   content: "";
@@ -153,31 +147,41 @@ visibility:hidden;
   border-color: transparent black transparent transparent;
 }
 
-
-
-.onConner  a:hover .tooltiptext {
-visibility: visible;
-transform:translateX(8px);
+.onConner a:hover .tooltiptext {
+  visibility: visible;
+  transform: translateX(8px);
 }
 
-.onConner a img{
+.onConner a img {
   cursor: alias;
-  transition: .5s;
+  transition: 0.5s;
   padding: 4px;
   margin: 4px 0;
   width: 30px;
   height: 30px;
 }
 
-.onConner  a i:hover, .onConner a img:hover{
-  transform:scale(1.1) ;
-  
+.onConner a i:hover,
+.onConner a img:hover {
+  transform: scale(1.1);
 }
 
-.onConner span{
-  background:rgba(116, 116, 116, 0.096);
-  display:inline-block;
-  width:35px;
+.onConner span {
+  background: rgba(116, 116, 116, 0.096);
+  display: inline-block;
+  width: 35px;
   height: 2px;
-  margin:2px;
+  margin: 2px;
 }
+
+#qr {
+  width: 62px;
+  position: absolute;
+  bottom: 50px;
+  left: 50px;
+  transition: 0.5s;
+  transform-origin: bottom left;
+}
+ #qr:hover{
+   transform: scale(2.5)
+ }
